# src/main/resources/openapi.yml
@@ -11,7 +11,7 @@ servers:
     description: Generated server URL
 
 paths:
-  /api/accounts/{accountId}/withdraw:
+  /api/v1/accounts/withdraw/{accountId}:
     put:
       tags:
         - Account
@@ -30,7 +30,7 @@ paths:
         content:
           application/json:
             schema:
-              $ref: '#/components/schemas/WithdrawalRequestDTO'
+              $ref: '#/components/schemas/TransactionRequestDTO'
         required: true
       responses:
         '200':
@@ -44,7 +44,7 @@ paths:
         '404':
           description: Account not found
 
-  /api/accounts/{accountId}/deposit:
+  /api/v1/accounts/deposit/{accountId}:
     put:
       tags:
         - Account
@@ -63,7 +63,7 @@ paths:
         content:
           application/json:
             schema:
-              $ref: '#/components/schemas/DepositRequestDTO'
+              $ref: '#/components/schemas/TransactionRequestDTO'
         required: true
       responses:
         '200':
@@ -77,7 +77,7 @@ paths:
         '404':
           description: Account not found
 
-  /api/accounts:
+  /api/v1/accounts:
     get:
       tags:
         - Account
@@ -115,7 +115,7 @@ paths:
               schema:
                 $ref: '#/components/schemas/AccountDTO'
 
-  /api/accounts/{accountId}:
+  /api/v1/accounts/{accountId}:
     get:
       tags:
         - Account
@@ -158,7 +158,7 @@ paths:
         '404':
           description: Account not found
 
-  /api/accounts/customer/{customerId}:
+  /api/v1/accounts/customer/{customerId}:
     get:
       tags:
         - Account
@@ -184,23 +184,91 @@ paths:
         '404':
           description: Customer not found
 
+  /api/v1/accounts/balance/{accountNumber}:
+    get:
+      tags:
+        - Account
+      summary: Obtains the account balance by its account number
+      description: Returns a double.
+      operationId: getAccountBalance
+      parameters:
+        - name: accountNumber
+          in: path
+          required: true
+          schema:
+            type: string
+      responses:
+        '200':
+          description: Double amount
+          content:
+            application/json:
+              schema:
+                type: number
+                format: double
+        '404':
+          description: Account not found
+
+  /api/v1/accounts/verify/{accountNumber}:
+    get:
+      tags:
+        - Account
+      summary: Verify if an account exists by its account number
+      description: Returns boolean.
+      operationId: verifyAccountByAccountNumber
+      parameters:
+        - name: accountNumber
+          in: path
+          required: true
+          schema:
+            type: string
+      responses:
+        '200':
+          description: Boolean
+          content:
+            application/json:
+              schema:
+                type: boolean
+        '404':
+          description: Account not found
+
+  /api/v1/accounts/update/{accountNumber}?amount={amount}:
+    get:
+      tags:
+        - Account
+      summary: Updates the account balance by its account number
+      description: Returns a String of completion.
+      operationId: updateBalanceByAccountNumber
+      parameters:
+        - name: accountNumber
+          in: path
+          required: true
+          schema:
+            type: string
+        - name: amount
+          in: path
+          required: true
+          schema:
+            type: number
+            format: double
+      responses:
+        '200':
+          description: Balance updated successfully
+          content:
+            application/json:
+              schema:
+                type: string
+        '404':
+          description: Account not found
+
 components:
   schemas:
-    WithdrawalRequestDTO:
+    TransactionRequestDTO:
       type: object
       properties:
         amount:
           type: number
           format: double
           example: 50.00
-
-    DepositRequestDTO:
-      type: object
-      properties:
-        amount:
-          type: number
-          format: double
-          example: 100.00
 
     CreateAccountDTO:
       type: object
